# DocRefinery

./: .dockerignore  .env.example  .gitignore  DOMAIN_NOTES.md  Dockerfile  FINAL_REPORT.md  INTERIM_REPORT.md  PIPELINE_REVIEW.md  README.md  pyproject.toml
.refinery/: extraction_ledger.jsonl  facts.db  review_queue.jsonl
.refinery/analysis/: final_extraction_quality_metrics.json  phase0_docling_parse_metrics.json  phase0_pdfplumber_metrics.json  phase0_text_coverage_samples.json  pipeline_diagram.html  pipeline_diagram.mmd
.refinery/extractions/: CBE_Annual_Report_Part_1.json  DBE_Audit_Report_Part_1.json  DBE_Audit_Report_Part_2.json  DBE_Audit_Report_Part_3.json  FTA_Performance_Survey_Part_2.json  FTA_Performance_Survey_Part_3.json  Tax_Expenditure_Ethiopia_Part_2.json  Tax_Expenditure_Ethiopia_Part_3.json
.refinery/pageindex/: CBE_Annual_Report_Part_1.json  CBE_Annual_Report_Part_2.json  CBE_Annual_Report_Part_3.json  DBE_Audit_Report_Part_1.json  DBE_Audit_Report_Part_2.json  DBE_Audit_Report_Part_3.json  FTA_Performance_Survey_Part_1.json  FTA_Performance_Survey_Part_2.json  FTA_Performance_Survey_Part_3.json  Tax_Expenditure_Ethiopia_Part_1.json  Tax_Expenditure_Ethiopia_Part_2.json  Tax_Expenditure_Ethiopia_Part_3.json
.refinery/profiles/: CBE_Annual_Report_Part_1.json  (+11 more)
rubric/: extraction_rules.yaml
src/: analysis_table_quality.py  build_final_report_pdf.py  config.py  run_corpus.py
tests/: test_fact_table.py  test_models_validation.py  test_phase2_extraction.py  test_phase3_phase4_pipeline.py  test_structure_builder.py  test_triage.py
(+48 files in other folders)
