[project]
name = "refinery"
version = "0.1.0"
description = "The Document Intelligence Refinery - Multi-Stage Extraction Pipeline"
authors = [
    { name = "FDE Candidate", email = "candidate@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7.0",
    "pdfplumber>=0.11.0",
    "PyYAML>=6.0.1",
    "pytest>=8.2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
